complete XL header

--- a/lampam_net/css/bootstrap-grid.css
+++ b/lampam_net/css/bootstrap-grid.css
@@ -21,9 +21,10 @@ html {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  max-width: 1140px;
 }
 
-@media (min-width: 576px) {
+/*@media (min-width: 576px) {
   .container {
     max-width: 540px;
   }
@@ -45,7 +46,7 @@ html {
   .container {
     max-width: 1140px;
   }
-}
+}*/
 
 .container-fluid {
   width: 100%;
