--- a/lampam_net/css/grid.css
+++ b/lampam_net/css/grid.css
@@ -1,7 +1,8 @@
 .container {
 	width: 100%;
 	margin: 0 auto;
-	max-width: 1140px;
+	/*max-width: 1340px;*/
+	height: inherit;
 }
 .row {
 	display: -webkit-flex;
@@ -13,17 +14,16 @@
 	flex-wrap: wrap;
 	width: 100%;
 	margin: 0 auto;
+	height: inherit;
 }
-
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12,
 .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12,
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12,
 .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12,
 .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
 	display: block;
+	height: inherit;
 }
-
-
 .col-xs-1  {
 	-ms-flex: 0 0 8.333333%;
 	flex: 0 0 8.333333%;
@@ -84,7 +84,6 @@
 	flex: 0 0 100%;
 	max-width: 100%;
 }
-
 .col-xs-offset-1  { margin-left: 8.333333%; }
 .col-xs-offset-2  { margin-left: 16.666667%; }
 .col-xs-offset-3  { margin-left: 25%; }
@@ -98,8 +97,9 @@
 .col-xs-offset-11 { margin-left: 91.666667%; }
 .col-xs-offset-12 { margin-left: 100%; }
 
+.xs-hide { display: none; }
 
-@media (min-width: 768px) {
+@media (min-width: 480px) {
 	.col-sm-1  {
 		-ms-flex: 0 0 8.333333%;
 		flex: 0 0 8.333333%;
@@ -160,7 +160,6 @@
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-
 	.col-sm-offset-1  { margin-left: 8.333333%; }
 	.col-sm-offset-2  { margin-left: 16.666667%; }
 	.col-sm-offset-3  { margin-left: 25%; }
@@ -235,7 +234,6 @@
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-
 	.col-md-offset-1  { margin-left: 8.333333%; }
 	.col-md-offset-2  { margin-left: 16.666667%; }
 	.col-md-offset-3  { margin-left: 25%; }
@@ -249,6 +247,7 @@
 	.col-md-offset-11 { margin-left: 91.666667%; }
 	.col-md-offset-12 { margin-left: 100%; }
 } 
+
 @media (min-width: 992px) {
 	.col-lg-1  {
 		-ms-flex: 0 0 8.333333%;
@@ -310,7 +309,6 @@
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-
 	.col-lg-offset-1  { margin-left: 8.333333%; }
 	.col-lg-offset-2  { margin-left: 16.666667%; }
 	.col-lg-offset-3  { margin-left: 25%; }
@@ -324,6 +322,7 @@
 	.col-lg-offset-11 { margin-left: 91.666667%; }
 	.col-lg-offset-12 { margin-left: 100%; }
 }
+
 @media (min-width: 1200px) {
 	.col-xl-1  {
 		-ms-flex: 0 0 8.333333%;
@@ -385,7 +384,6 @@
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
-
 	.col-xl-offset-1  { margin-left: 8.333333%; }
 	.col-xl-offset-2  { margin-left: 16.666667%; }
 	.col-xl-offset-3  { margin-left: 25%; }
@@ -398,4 +396,34 @@
 	.col-xl-offset-10 { margin-left: 83.333333%; }
 	.col-xl-offset-11 { margin-left: 91.666667%; }
 	.col-xl-offset-12 { margin-left: 100%; }
-} 
+}
+
+.display_flex {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+.direction_column {
+	flex-direction: column;
+}
+.align_center {
+	-ms-align-items: center;
+	align-items: center;
+}
+.justify_center {
+	justify-content: center;
+}
+.justify_start {
+	justify-content: flex-start;
+}
+.justify_end {
+	justify-content: flex-end;
+}
+.justify_between {
+	justify-content: space-between;
+}
+.justify_around {
+	justify-content: space-around;
+}
