--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -179,7 +179,7 @@ body {
 		position: relative;
 		display: block;
 		text-decoration: none;
-		transition: all 1.9s ease-in-out;
+		/*transition: all 1.9s ease-in-out;*/
 		font-family: 'Open Sans Condensed', sans-serif;
 		color: #01336e;
 		font-size: 10.2em;
@@ -197,7 +197,7 @@ body {
 		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.line-anime{animation:shift 0.9s linear infinite; transform:translateY(10px);}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='white' stroke-width='1' class='line-anime' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
 		height: 5px;
 		width: 100%;
-		transition: all 1.9s ease-in-out;
+		/*transition: all 1.9s ease-in-out;*/
 	}
 	.line-wave-1 { bottom:  2px; }
 	.line-wave-2 { bottom:  6px; }
