--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -20,7 +20,7 @@ COMMON
 	box-sizing: border-box;
 }
 body {
-	min-width: 320px;
+	width: 100%;
 	font-size: 10px;
 }
 
@@ -30,13 +30,13 @@ body {
 .header__menu {
 	display: block;
 	position: fixed;
-	/*width: 100%;*/
 	min-height: 54px;
 	background-color: #fff;
 	top: 12px;
 	left: 0;
 	right: 0;
 	z-index: 50;
+	box-shadow: 0 2px 6px 0px #ccc;
 }
 .main-menu {
 	max-width: 1140px;
@@ -86,259 +86,588 @@ body {
 	text-decoration: none;
 }
 
+.slider:after {
+	position: absolute;
+	display: block;
+	content: '';
+	right: 60px;
+	bottom: 40px;
+	width: 110px;
+	height: 165px;
+	background-color: #fff;
+	background-image: url(../img/logo-rrf.svg);
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	z-index: 15;
+	box-shadow: 0 8px 20px 1px rgba(32, 40, 48, 0.65);
+}
 
-
-/*.slider {
-	min-height: 524px;
-	}*/
-	.slider:after {
-		position: absolute;
-		display: block;
-		content: '';
-		right: 60px;
-		bottom: 40px;
-		width: 110px;
-		height: 165px;
-		background-color: #fff;
-		background-image: url(../img/logo-rrf.svg);
-		background-position: center;
-		background-size: contain;
-		background-repeat: no-repeat;
-		z-index: 15;
-		box-shadow: 0 8px 20px 1px rgba(32, 40, 48, 0.65);
-	}
-
-	.slide:before {
-		position: absolute;
-		display: block;
-		content: '';
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: rgba(14, 18, 29, 0.3);
-		z-index: 5;
-	}
-	.slide__title {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -45%);
-		text-align: center;
-		font-family: 'Open Sans Condensed', sans-serif;
-		font-size: 6.9em;
-		line-height: 1.03;
-		z-index: 10;
-		text-transform: uppercase;
-	}
-	.slide__header {
-		color: #ffffff;
-		font-weight: 700;
-	}
-	.slide__subheader {
-		color: #ffffff;
-		font-weight: 300;
-	}
-	.slider .slick-dots {
-		position: absolute;
-		bottom: 30px;
-	}
-	.slider .slick-dots li {
-		width: 15px;
-		height: 15px;
-		margin: 0 8px;
-	}
-	.slider .slick-dots li button {
-		width: 15px;
-		height: 15px;
-	}
-	.slider .slick-dots li button:before, .slider .slick-dots li.slick-active button:before {
-		opacity: 1;
-		color: transparent;
-		border: 2px solid #fff;
-		border-radius: 50%;
-		width: 15px;
-		height: 15px;
-		line-height: 1;
-	}
-	.slider .slick-dots li.slick-active button:before {
-		background-color: #fff;
-	}
-	.slick-slide img {
-		width: 100%;
-	}
-	.slick-dotted.slick-slider {
-		margin-bottom: 0;
-	}
+.slide:before {
+	position: absolute;
+	display: block;
+	content: '';
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(14, 18, 29, 0.3);
+	z-index: 5;
+}
+.slide__title {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -45%);
+	text-align: center;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 6.9em;
+	line-height: 1.03;
+	z-index: 10;
+	text-transform: uppercase;
+}
+.slide__header {
+	color: #ffffff;
+	font-weight: 700;
+}
+.slide__subheader {
+	color: #ffffff;
+	font-weight: 300;
+}
+.slider .slick-dots {
+	position: absolute;
+	bottom: 30px;
+}
+.slider .slick-dots li {
+	width: 15px;
+	height: 15px;
+	margin: 0 8px;
+}
+.slider .slick-dots li button {
+	width: 15px;
+	height: 15px;
+}
+.slider .slick-dots li button:before, .slider .slick-dots li.slick-active button:before {
+	opacity: 1;
+	color: transparent;
+	border: 2px solid #fff;
+	border-radius: 50%;
+	width: 15px;
+	height: 15px;
+	line-height: 1;
+}
+.slider .slick-dots li.slick-active button:before {
+	background-color: #fff;
+}
+.slick-slide img {
+	width: 100%;
+}
+.slick-dotted.slick-slider {
+	margin-bottom: 0;
+}
 
 
 
 
 
-	.line-wave__text {
-		position: relative;
-		display: block;
-		text-decoration: none;
-		/*transition: all 1.9s ease-in-out;*/
-		font-family: 'Open Sans Condensed', sans-serif;
-		color: #01336e;
-		font-size: 10.2em;
-		font-weight: bold;
-		line-height: 1;
-		padding: 0;
-		margin: 0 20px;
-	}
-	.line-wave {
-		content: "";
-		display: block;
-		position: absolute;
-		bottom: 0px;
-		left: 0;
-		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.line-anime{animation:shift 0.9s linear infinite; transform:translateY(10px);}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='white' stroke-width='1' class='line-anime' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-		height: 5px;
-		width: 100%;
-		/*transition: all 1.9s ease-in-out;*/
-	}
-	.line-wave-1 { bottom:  2px; }
-	.line-wave-2 { bottom:  6px; }
-	.line-wave-3 { bottom: 10px; }
-	.line-wave-4 { bottom: 14px; }
-	.line-wave-5 { bottom: 18px; }
-	.line-wave-6 { bottom: 22px; }
-	.line-wave-7 { bottom: 26px; }
-	.line-wave-8 { bottom: 30px; }
-	.line-wave-9 { bottom: 34px; }
+.line-wave__text {
+	position: relative;
+	display: block;
+	text-decoration: none;
+	/*transition: all 1.9s ease-in-out;*/
+	font-family: 'Open Sans Condensed', sans-serif;
+	color: #01336e;
+	font-size: 10.2em;
+	font-weight: bold;
+	line-height: 1;
+	padding: 0;
+	margin: 0 20px;
+}
+.line-wave {
+	content: "";
+	display: block;
+	position: absolute;
+	bottom: 0px;
+	left: 0;
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.line-anime{animation:shift 0.9s linear infinite; transform:translateY(10px);}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='white' stroke-width='1' class='line-anime' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+	height: 5px;
+	width: 100%;
+	/*transition: all 1.9s ease-in-out;*/
+}
+.line-wave-1 { bottom:  2px; }
+.line-wave-2 { bottom:  6px; }
+.line-wave-3 { bottom: 10px; }
+.line-wave-4 { bottom: 14px; }
+.line-wave-5 { bottom: 18px; }
+.line-wave-6 { bottom: 22px; }
+.line-wave-7 { bottom: 26px; }
+.line-wave-8 { bottom: 30px; }
+.line-wave-9 { bottom: 34px; }
 
 
-	.advantages {
-		padding: 40px 0 20px 0;
-	}
-	.advantages__fish {
-		display: block;
-		margin: 0 auto;
-		/*max-width: 625px;*/
-		max-width: 525px;
-		margin-bottom: 30px;
-		left: 30px; /* Это непонятно, почему бы просто не по центру ??? */
-	}
-	.advantages__bullets {
-		display: -webkit-flex;
-		display: -moz-flex;
-		display: -ms-flex;
-		display: -o-flex;
-		display: flex;
+.advantages {
+	padding: 40px 0 20px 0;
+}
+.advantages__fish {
+	display: block;
+	margin: 0 auto;
+	/*max-width: 625px;*/
+	max-width: 525px;
+	margin-bottom: 30px;
+	left: 30px; /* Это непонятно, почему бы просто не по центру ??? */
+}
+.advantages__bullets {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
 
-		justify-content: center;
-		align-items: center;
-		margin-bottom: 45px;
-	}
-	.advantage__bullet {
-		width: 98px;
-		height: 98px;
-		margin: 0 12px;
-		cursor: pointer;
-		transition: 0.2s linear;
-	}
-	.advantage__item {}
-	.advantage__info {
-		display: none;
-		position: absolute;
-		font-family: 'Neucha', cursive;
-		color: #01336e;
-		font-size: 1.4em;
-		font-weight: 400;
-		line-height: 1;
-		letter-spacing: 0.68px;
-		transform: translateY(-100%);
-	}
-	.advantage__info--wild-fish {
-		top: -65px;
-		left: -60px;
-	}
-	.advantage__info--wild-fish:after {
-		position: absolute;
-		content: '';
-		background-image: url(../img/arrow-wild-fish.png);
-		background-size: contain;
-		background-repeat: no-repeat;
-		background-position: center;
-		width: 62px;
-		height: 58px;
-		bottom: -62px;
-		left: 28px;
-	}
-	.advantage__info--omega-3 {
-		top: -53px;
-		left: -70px;
-	}
-	.advantage__info--omega-3:after {
-		position: absolute;
-		content: '';
-		background-image: url(../img/arrow-omega-3.png);
-		background-size: contain;
-		background-repeat: no-repeat;
-		background-position: center;
-		width: 87px;
-		height: 49px;
-		bottom: -49px;
-		left: 29px;
-	}
-	.advantage__info--ca-mg-i {
-		top: -50px;
-		right: -120px;
-	}
-	.advantage__info--ca-mg-i:after {
-		position: absolute;
-		content: '';
-		background-image: url(../img/arrow-ca-mg-i.png);
-		background-size: contain;
-		background-repeat: no-repeat;
-		background-position: center;
-		width: 82px;
-		height: 57px;
-		bottom: -57px;
-		left: -67px;
-	}
-	.advantage__info--mechanic {
-		top: -63px;
-		right: -110px;
-	}
-	.advantage__info--mechanic:after {
-		position: absolute;
-		content: '';
-		background-image: url(../img/arrow-mechanic.png);
-		background-size: contain;
-		background-repeat: no-repeat;
-		background-position: center;
-		width: 61px;
-		height: 58px;
-		bottom: -73px;
-		left: -55px;
-	}
-	.advantage__item:hover .advantage__bullet {
-		transform: scale(1.1);
-	}
-	.advantage__item:hover .advantage__info {
-		transition: 0.2s linear;
-		display: block;
-	}
-	.advantages__description {
-		color: #01336e;
-		font-family: "Open Sans Condensed", sans-serif;
-		font-size: 2.4em;
-		font-weight: 300;
-		line-height: 1.2;
-		margin: 0 auto;
-		margin-bottom: 30px;
-		text-align: center;
-	}
-	.next-section-wrap {
-		text-align: center;
-	}
-	.next-section {
-		text-align: center;
-		margin: 0 auto;
-	}
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 45px;
+}
+.advantage__bullet {
+	width: 98px;
+	height: 98px;
+	margin: 0 12px;
+	cursor: pointer;
+	transition: 0.2s linear;
+}
+.advantage__item {}
+.advantage__info {
+	display: none;
+	position: absolute;
+	font-family: 'Neucha', cursive;
+	color: #01336e;
+	font-size: 1.4em;
+	font-weight: 400;
+	line-height: 1;
+	letter-spacing: 0.68px;
+	transform: translateY(-100%);
+}
+.advantage__info--wild-fish {
+	top: -65px;
+	left: -60px;
+}
+.advantage__info--wild-fish:after {
+	position: absolute;
+	content: '';
+	background-image: url(../img/arrow-wild-fish.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 62px;
+	height: 58px;
+	bottom: -62px;
+	left: 28px;
+}
+.advantage__info--omega-3 {
+	top: -53px;
+	left: -70px;
+}
+.advantage__info--omega-3:after {
+	position: absolute;
+	content: '';
+	background-image: url(../img/arrow-omega-3.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 87px;
+	height: 49px;
+	bottom: -49px;
+	left: 29px;
+}
+.advantage__info--ca-mg-i {
+	top: -50px;
+	right: -120px;
+}
+.advantage__info--ca-mg-i:after {
+	position: absolute;
+	content: '';
+	background-image: url(../img/arrow-ca-mg-i.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 82px;
+	height: 57px;
+	bottom: -57px;
+	left: -67px;
+}
+.advantage__info--mechanic {
+	top: -63px;
+	right: -110px;
+}
+.advantage__info--mechanic:after {
+	position: absolute;
+	content: '';
+	background-image: url(../img/arrow-mechanic.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 61px;
+	height: 58px;
+	bottom: -73px;
+	left: -55px;
+}
+.advantage__item:hover .advantage__bullet {
+	transform: scale(1.1);
+}
+.advantage__item:hover .advantage__info {
+	transition: 0.2s linear;
+	display: block;
+}
+.advantages__description {
+	color: #01336e;
+	font-family: "Open Sans Condensed", sans-serif;
+	font-size: 2.4em;
+	font-weight: 300;
+	line-height: 1.2;
+	margin: 0 auto;
+	margin-bottom: 30px;
+	text-align: center;
+}
+.next-section-wrap {
+	text-align: center;
+}
+.next-section {
+	text-align: center;
+	margin: 0 auto;
+}
+
+.promo {
+	width: 100%;
+	padding: 160px 0 140px 0;
+	background-image: url(../img/bg-promo.png);
+	background-position: center top;
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.product-slide {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-start;
+}
+.col {
+	display: inline-block;
+}
+.col--half {
+	width: 50%;
+}
+.col--info {
+	padding-bottom: 80px;
+}
+.product-slider__photo {
+	position: relative;
+	display: block;
+	max-width:  423px;
+	max-height: 533px;
+	z-index: 10;
+}
+.product-slider__photo img {
+	width: 100%;
+	height: 100%;
+}
+.product-slider__photo:after {
+	position: absolute;
+	display: block;
+	content: '';
+	width: 140%;
+	height: 135px;
+	bottom: -75px;
+	left: -40px;
+	background-image: url(../img/product-shadow.png);
+	background-position: center;
+	-webkit-background-size: contain;
+	background-size: contain;
+	background-repeat: no-repeat;
+	z-index: -1;
+}
+.product-slide__title {
+	color: #01336e;
+	font-family: "Open Sans Condensed", sans-serif;
+	font-size: 3.6em;
+	font-weight: bold;
+	line-height: 1.2;
+	margin-bottom: 60px;
+}
+.option-list {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	font-size: 1.8em;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #01336e;
+	margin-bottom: 35px;
+	font-family: 'Open Sans', sans-serif;
+}
+.btn {
+	display: inline-block;
+	padding: 10px 20px 16px;
+	font-family: "Open Sans Condensed";
+	font-size: 2.2em;
+	font-weight: 700;
+	text-transform: lowercase;
+	line-height: 1;
+	border-radius: 100px;
+	cursor: pointer;
+	outline: none;
+	transition: 0.2s linear;
+	user-select: none;
+}
+.btn--orange {
+	color: #fff;
+	background-color: #f05840;
+}
+.btn--orange:hover, .btn--orange:active {
+	background-color: #ff6f59;
+}
+.btn--promo-buy {
+	padding-right: 45px;
+}
+.btn--promo-buy:after {
+	position: absolute;
+	display: inline-block;
+	width: 13px;
+	height: 13px;
+	content: '';
+	background-image: url(../img/gde-kupit-strelka.svg);
+	background-position: center;
+	-webkit-background-size: contain;
+	background-size: contain;
+	background-repeat: no-repeat;
+	top: 50%;
+	right: 20px;
+	transform: translateY(-50%);
+}
 
 
 
+
+
+
+.slider-prev, .slider-next {
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
+	background-color: #fff;
+	cursor: pointer;
+}
+.slider-prev {
+	background-image: url(../img/slider-prev.svg);
+}
+.slider-next {
+	background-image: url(../img/slider-next.svg);
+}
+.promo-prev, .promo-next {
+	position: absolute;
+	display: inline-block;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	cursor: pointer;
+	outline: none;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.promo-prev {
+	left: 0;
+}
+.promo-next {
+	right: 0;
+}
+.promo-nav {
+	padding-bottom: 80px;
+}
+.promo-nav .slick-track {
+	padding: 40px 0 20px 0;
+}
+.promo-nav-slide {
+	text-align: center;
+	outline: none;
+}
+.promo-nav-slide img {
+	display: inline-block;
+	width: 67px;
+	height: 93px;
+	transition: 0.5s linear;
+}
+.promo-nav-slide:after {
+	position: absolute;
+	display: inline-block;
+	content: '';
+	background-image: url(../img/product-preview-shadow.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: -8px;
+	width: 80%;
+	height: 15px;
+	z-index: -1;
+}
+.promo-nav-slide.slick-current img {
+	display: inline-block;
+	transform: rotate(-15deg) translateY(-30px);
+}
+.product__rating {
+	margin-top: 30px;
+}
+.product__rating img {
+	display: inline-block;
+	width: 22px;
+	height: 21px;
+	cursor: pointer;
+}
+
+.wave-separator .line-wave {
+	position: relative;
+	bottom: auto;
+	height: 2px;
+	background: rgba(168, 227, 255);
+}
+.wave-separator .line-wave { margin-top: 7px; }
+
+
+
+
+
+.section-title {
+	width: 100%;
+	text-align: center;
+	color: #01336e;
+	font-family: "Open Sans Condensed";
+	font-size: 5.4em;
+	font-weight: 700;
+	line-height: 1;
+	text-transform: uppercase;
+	letter-spacing: 0.134em;
+}
+.recipes {
+	padding: 80px 0;
+}
+.recipes .section-title {
+	margin-bottom: 100px;
+}
+.wave-separator {
+	width: 100%;
+	height: 55px;
+	background-image: url(../img/volna-2560.svg);
+	background-repeat: repeat-x;
+	background-position: center;
+	background-size: 100%;
+}
+.recipe-main-photo {
+	padding-right: 25px;
+}
+.recipe {
+	position: relative;
+	width: 100%;
+	min-height: 240px;
+	padding: 0;
+	margin: 0;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+}
+.recipe--main {
+	min-height: 390px;
+}
+.recipe img {
+	position: absolute;
+	display: inline-block;
+	width: 105%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.recipe__info {
+	height: 100%;
+	flex-direction: column;
+	align-items: flex-start;
+	padding-left: 25px;
+	color: #01336e;
+	line-height: 1.2;
+}
+.recipe-name {
+	width: 50%;
+	font-family: "Open Sans Condensed";
+	font-size: 4.1em;
+	font-weight: 700;
+}
+.details {
+	width: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+
+	align-items: center;
+	justify-content: flex-start;
+}
+.time, .portion {
+	width: 26%;
+	display: inline-block;
+	font-family: "Open Sans Condensed";
+	font-size: 2.4em;
+	font-weight: 300;
+	line-height: 44px;
+	padding-left: 55px;
+	margin: 35px 0 45px 0;
+}
+.time:after, .portion:after {
+	position: absolute;
+	content: '';
+	width: 44px;
+	height: 44px;
+	background-position: center;
+	background-repeat: no-repeat;
+	-webkit-background-size: contain;
+	background-size: contain;
+	left: 0;
+	top: 0;
+}
+.time:after {
+	background-image: url(../img/timer.png);
+
+}
+.portion:after {
+	background-image: url(../img/plate.png);
+}
+.recipe__photo {
+	position: relative;
+	width: 100%;
+	min-height: 240px;
+	padding: 0;
+	margin: 0;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+}
+.recipe__caption {
+	position: absolute;
+	margin-top: 40px;
+}
