new products photos

--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -463,6 +463,10 @@ body {
 	border-radius: 50px;
 	background-color: #fff;
 	cursor: pointer;
+	background-position: center;
+	-webkit-background-size: contain;
+	background-size: contain;
+	background-repeat: no-repeat;
 }
 .slider-prev {
 	background-image: url(../img/slider-prev.svg);
