--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -8,6 +8,29 @@ FONTS
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Neucha&display=swap&subset=cyrillic');
 
+.animated.delay-0-3s {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+.animated.delay-0-5s {
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+}
+
+.animated.delay-0-8s {
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+}
+.animated.delay-1-5s {
+  -webkit-animation-delay: 1.5s;
+  animation-delay: 1.5s;
+}
+.animated.delay-2-5s {
+  -webkit-animation-delay: 2.5s;
+  animation-delay: 2.5s;
+}
+
 /*
 COMMON
 */
@@ -19,11 +42,14 @@ COMMON
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+html {
+	width: 100%;
+	overflow-x: hidden;
+}
 body {
 	width: 100%;
 	font-size: 10px;
 }
-
 
 
 
@@ -207,6 +233,7 @@ body {
 
 .advantages {
 	padding: 40px 0 20px 0;
+	overflow-x: hidden;
 }
 .advantages__fish {
 	display: block;
@@ -415,7 +442,7 @@ body {
 .btn {
 	display: inline-block;
 	padding: 10px 20px 16px;
-	font-family: "Open Sans Condensed";
+	font-family: "Open Sans Condensed", sans-serif;
 	font-size: 2.2em;
 	font-weight: 700;
 	text-transform: lowercase;
@@ -461,7 +488,6 @@ body {
 	width: 50px;
 	height: 50px;
 	border-radius: 50px;
-	background-color: #fff;
 	cursor: pointer;
 	background-position: center;
 	-webkit-background-size: contain;
@@ -552,15 +578,16 @@ body {
 	width: 100%;
 	text-align: center;
 	color: #01336e;
-	font-family: "Open Sans Condensed";
+	font-family: "Open Sans Condensed", sans-serif;
 	font-size: 5.4em;
 	font-weight: 700;
 	line-height: 1;
 	text-transform: uppercase;
-	letter-spacing: 0.134em;
+	letter-spacing: 0.075em;
 }
 .recipes {
 	padding: 80px 0;
+	overflow-x: hidden;
 }
 .recipes .section-title {
 	margin-bottom: 100px;
@@ -574,14 +601,15 @@ body {
 	background-size: 100%;
 }
 .recipe-main-photo {
-	padding-right: 25px;
+	padding: 0 24px;
+}
+.recipes-slider-wrap {
+	margin-top: 65px;
 }
 .recipe {
 	position: relative;
 	width: 100%;
 	min-height: 240px;
-	padding: 0;
-	margin: 0;
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -591,8 +619,13 @@ body {
 	justify-content: center;
 	overflow: hidden;
 }
+.recipe.slick-slide {
+	padding: 0 24px;
+}
 .recipe--main {
 	min-height: 390px;
+	border-radius: 10px;
+	box-shadow: 0 7px 15px 1px #c5c9ca;
 }
 .recipe img {
 	position: absolute;
@@ -606,15 +639,31 @@ body {
 	height: 100%;
 	flex-direction: column;
 	align-items: flex-start;
-	padding-left: 25px;
+	padding: 0 24px;
 	color: #01336e;
 	line-height: 1.2;
 }
 .recipe-name {
 	width: 50%;
-	font-family: "Open Sans Condensed";
+	font-family: "Open Sans Condensed", sans-serif;
 	font-size: 4.1em;
 	font-weight: 700;
+}
+.recipe__link, .recipe__link:hover {
+	text-decoration: none;
+	outline: none;
+}
+.slider-controls {
+	max-width: 220px;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+
+	justify-content: space-between;
+	margin: 0 auto;
+	margin-top: 50px;
 }
 .details {
 	width: 100%;
@@ -630,7 +679,7 @@ body {
 .time, .portion {
 	width: 26%;
 	display: inline-block;
-	font-family: "Open Sans Condensed";
+	font-family: "Open Sans Condensed", sans-serif;
 	font-size: 2.4em;
 	font-weight: 300;
 	line-height: 44px;
@@ -657,11 +706,8 @@ body {
 	background-image: url(../img/plate.png);
 }
 .recipe__photo {
-	position: relative;
-	width: 100%;
 	min-height: 240px;
-	padding: 0;
-	margin: 0;
+	border-radius: 10px;
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -670,8 +716,368 @@ body {
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
+	box-shadow: 0 7px 15px 1px #c5c9ca;
 }
 .recipe__caption {
+	display: block;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 35px;
+	color: #01336e;
+	font-family: "Open Sans Condensed", sans-serif;
+	font-size: 2.2em;
+	font-weight: 700;
+}
+.trava {
 	position: absolute;
-	margin-top: 40px;
+	background-image: url(../img/trava.svg);
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	z-index: 1;
+}
+.recipes .trava {
+	width: 138px;
+	height: 115px;
+	top: 6%;
+	left: 52%;
+}
+.svekla {
+	position: absolute;
+	background-image: url(../img/svekla.svg);
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	z-index: 1;
+}
+.recipes .svekla {
+	width: 367px;
+	height: 587px;
+	top: 0;
+	left: 73%;
+}
+
+
+
+/* COMMENTS */
+.comments {
+	background: rgb(146,206,212);
+	background: linear-gradient(0deg, rgba(146,206,212,1) 0%, rgba(209,232,235,1) 50%, rgba(255,255,255,1) 100%);
+	padding: 75px 0;
+	overflow-x: hidden;
+}
+.quote {
+	display: block;
+	position: absolute;
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	z-index: 1;
+}
+.comments .quote-up {
+	background-image: url(../img/quote-stroke.svg);
+	width: 250px;
+	height: 185px;
+	top: 2%;
+	left: -15%;
+}
+@media (min-width: 1200px) and (max-width: 1920px) {
+	.comments .quote-up {
+		left: -2%;
+	}
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+}
+@media (min-width: 768px) and (max-width: 992px) {
+}
+@media (min-width: 480px) and (max-width: 768px) {
+}
+@media (max-width: 480px) {
+}
+
+.comments .quote-down {
+	background-image: url(../img/quote-stroke-down.svg);
+	width: 250px;
+	height: 185px;
+	top: 72%;
+	right: -15%;
+}
+@media (min-width: 1200px) and (max-width: 1920px) {
+	.comments .quote-down {
+		right: -2%;
+	}
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+}
+@media (min-width: 768px) and (max-width: 992px) {
+}
+@media (min-width: 480px) and (max-width: 768px) {
+}
+@media (max-width: 480px) {
+}
+.comments .slick-track {
+	padding: 20px 0;
+}
+.comments .section-title {
+	margin-bottom: 75px;
+}
+.comment {
+	max-width: 550px !important;
+	background-color: #fff;
+	border-radius: 10px;
+	border: 1px solid #ffffff;
+	padding: 66px 49px 41px 49px;
+	margin: 0 25px;
+	box-shadow: 0 7px 15px 1px #9ecad5;
+}
+.comment:before {
+	position: absolute;
+	content: '';
+	display: inline-block;
+	width: 110px;
+	height: 80px;
+	background-image: url(../img/quote-gray.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	top: 20px;
+	left: 30px;
+}
+.comment__text {
+	width: 100%;
+	color: #01336e;
+	font-family: "Open Sans";
+	font-size: 1.8em;
+	font-weight: 400;
+	line-height: 1.3;
+	margin-bottom: 50px;
+	min-height: 100px;
+	max-height: 100px;
+	overflow-y: auto;
+	padding-right: 20px;
+}
+.author__photo {
+	width: 65px;
+	height: 68px;
+	margin-right: 16px;
+}
+.comment__author {
+	display: -webkit-inline-flex;
+	display: -moz-inline-flex;
+	display: -ms-inline-flex;
+	display: -o-inline-flex;
+	display: inline-flex;
+
+	align-items: center;
+	justify-content: space-between;
+
+	left: 50%;
+	transform: translateX(-50%);
+}
+.author__photo img {
+	width: inherit;
+	height: inherit;
+}
+.author__info {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+}
+.author__link, .author__link:hover {
+	text-decoration: none;
+}
+.author__name {
+	color: #01336e;
+	font-family: "Open Sans Condensed", sans-serif;
+	font-size: 2.2em;
+	font-weight: 700;
+}
+.author__type {
+	color: #acb2b5;
+	font-family: "Open Sans Condensed", sans-serif;
+	font-size: 1.8em;
+	font-weight: 300;
+	line-height: 1.5;
+}
+
+
+.animated-scroll {
+	opacity: 0;
+}
+.slick-slide {
+	outline: none;
+}
+
+
+
+/* FAQ */
+.faq {
+	padding: 100px 0;
+}
+.faq .section-title {
+	margin-bottom: 100px;
+}
+.faq__row {
+	width: 100%;
+	display: -webkit-inline-flex;
+	display: -moz-inline-flex;
+	display: -ms-inline-flex;
+	display: -o-inline-flex;
+	display: inline-flex;
+	align-items: center;
+	justify-content: flex-start;
+	margin-bottom: 70px;
+}
+.faq__avatar {
+	width: 105px;
+	height: 110px;
+	margin-right: 25px;
+	margin-bottom: -40px;
+}
+.faq__avatar--antei {
+	margin-left: 25px;
+	margin-right: 0;
+	align-self: flex-end;
+}
+.faq__buble {
+	width: 100%;
+	display: inline-block;
+	border-radius: 50px;
+	box-shadow: 0 4px 0px 2px #dae3e8;
+	z-index: 1;
+}
+.faq__buble--question {
+	width: auto;
+	font-family: "Open Sans Condensed", sans-serif;
+	background-color: #00acb5;
+	color: #ffffff;
+	font-size: 2.6em;
+	font-weight: 700;
+	line-height: 1.2;
+	padding: 24px 50px;
+}
+.faq__buble:before, .faq__buble:after {
+	position: absolute;
+	content: '';
+	display: inline-block;
+	width: 45px;
+	height: 25px;
+	background-repeat: no-repeat;
+	-webkit-background-size: contain;
+	background-size: contain;
+	background-position: center;
+}
+.faq__buble--question:before {
+	background-image: url(../img/buble-tail-green-l.svg);
+	bottom: -20px;
+	left: 10px;
+	z-index: 5;
+}
+.faq__buble--question:after {
+	background-image: url(../img/buble-tail-gray-l.svg);
+	left: 12px;
+	bottom: -24px;
+	z-index: 1;
+}
+.faq__buble--answer {
+	background-color: #ebf1f5;
+	color: #01336e;
+	font-family: "Open Sans", sans-serif;
+	font-size: 1.8em;
+	font-weight: 400;
+	line-height: 1.5;
+	padding: 50px 65px;
+}
+.faq__buble--answer:before {
+	background-image: url(../img/buble-tail-green-r.svg);
+	bottom: -20px;
+	right: 10px;
+	z-index: 5;
+}
+.faq__buble--answer:after {
+	background-image: url(../img/buble-tail-gray-r.svg);
+	right: 12px;
+	bottom: -24px;
+	z-index: 1;
+}
+.fishing {
+
+}
+.fishing-map {
+	width: 100%;
+	height: auto;
+}
+.fishing-point {
+	opacity: 0;
+	position: absolute;
+	width: 50px;
+	height: 15px;
+	background-image: url(../img/fishing-point.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+
+}
+.fishing-point-1 {
+	top: 84%;
+	left: 25%;
+}
+.fishing-point-2 {
+	top: 61%;
+	left: 38%;
+}
+.fishing-point-3 {
+	top: 51%;
+	left: 48%;
+}
+.fishing-point-4 {
+	top: 41%;
+	left: 53%;
+}
+.fishing-point-5 {
+	top: 16%;
+	left: 71%;
+}
+.btn--questions-more {
+	margin-top: 30px;
+}
+.js-question-more {
+	width: 100%;
+	text-align: center;
+	padding-left: 8.33333%;
+}
+.bg-elem {
+	display: block;
+	position: absolute;
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	z-index: 1;
+}
+.bg-fish-big {
+	background-image: url(../img/faq-ivasi-big.svg);
+	width: 392px;
+	height: 102px;
+	top: 11%;
+	left: 60%;
+}
+.bg-fish-small {
+	background-image: url(../img/faq-ivasi-small.svg);
+	width: 225px;
+	height: 59px;
+	top: 17%;
+	left: 53%;
+}
+.bg-ship {
+	background-image: url(../img/ship-gray.svg);
+	width: 470px;
+	height: 343px;
+	top: 77%;
+	left: 5%;
 }
