--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -9,26 +9,26 @@ FONTS
 @import url('https://fonts.googleapis.com/css?family=Neucha&display=swap&subset=cyrillic');
 
 .animated.delay-0-3s {
-  -webkit-animation-delay: 0.3s;
-  animation-delay: 0.3s;
+	-webkit-animation-delay: 0.3s;
+	animation-delay: 0.3s;
 }
 
 .animated.delay-0-5s {
-  -webkit-animation-delay: 0.5s;
-  animation-delay: 0.5s;
+	-webkit-animation-delay: 0.5s;
+	animation-delay: 0.5s;
 }
 
 .animated.delay-0-8s {
-  -webkit-animation-delay: 0.8s;
-  animation-delay: 0.8s;
+	-webkit-animation-delay: 0.8s;
+	animation-delay: 0.8s;
 }
 .animated.delay-1-5s {
-  -webkit-animation-delay: 1.5s;
-  animation-delay: 1.5s;
+	-webkit-animation-delay: 1.5s;
+	animation-delay: 1.5s;
 }
 .animated.delay-2-5s {
-  -webkit-animation-delay: 2.5s;
-  animation-delay: 2.5s;
+	-webkit-animation-delay: 2.5s;
+	animation-delay: 2.5s;
 }
 
 /*
@@ -1080,4 +1080,78 @@ body {
 	height: 343px;
 	top: 77%;
 	left: 5%;
+}
+
+/* SHOPS */
+.shops {
+	padding: 90px 0 120px 0;
+}
+.shops .section-title {
+	margin-bottom: 100px;
+}
+.shops-list {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+}
+.shop-link {
+	width: 18%;
+	text-decoration: none;
+	outline: none;
+	margin-bottom: 100px;
+}
+.shop-link img {
+	width: 100%;
+	height: auto;
+}
+.btn--more-shops {
+	margin: 0 auto;
+}
+.js-more-shops {
+	text-align: center;
+}
+
+/* FOOTER */
+footer {
+	background: linear-gradient(0deg, rgba(146,206,212,1) 0%, rgba(209,232,235,1) 50%, rgba(255,255,255,1) 100%);
+	padding: 75px 0 0 0;
+}
+footer .section-title {
+	margin-bottom: 70px;
+}
+.bg-footer-ship {
+	background-image: url(../img/kontakt-ship.svg);
+	width: 423px;
+	height: 309px;
+	top: 23%;
+	right: 10%;
+}
+.block-title, .phone {
+	color: #01336e;
+	font-family: "Open Sans Condensed", sans-serif;
+	font-size: 3.3em;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+.address {
+	color: #01336e;
+	font-family: "Open Sans", sans-serif;
+	font-weight: 400;
+	font-size: 1.8em;
+	line-height: 2;
+}
+.copyrights {
+	padding: 16px 0 25px 0;
+	margin: 80px 40px 0 40px;
+	border-top: 1px solid #fff;
+	color: #ffffff;
+	font-family: "Open Sans", sans-serif;
+	font-size: 1.8em;
+	font-weight: 400;
+	line-height: 1;
 }
