--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -441,6 +441,8 @@ body {
 }
 .btn {
 	display: inline-block;
+	min-width: 160px;
+	text-align: center;
 	padding: 10px 20px 16px;
 	font-family: "Open Sans Condensed", sans-serif;
 	font-size: 2.2em;
