--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -421,9 +421,10 @@ body {
 	font-size: 3.6em;
 	font-weight: bold;
 	line-height: 1.2;
-	margin-bottom: 60px;
+	margin-bottom: 30px;
 }
 .option-list {
+	width: 65%;
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -585,7 +586,6 @@ body {
 	font-weight: 700;
 	line-height: 1;
 	text-transform: uppercase;
-	letter-spacing: 0.075em;
 }
 .recipes {
 	padding: 80px 0;
@@ -627,15 +627,26 @@ body {
 .recipe--main {
 	min-height: 390px;
 	border-radius: 10px;
-	box-shadow: 0 7px 15px 1px #c5c9ca;
+	/*box-shadow: 0 7px 15px 1px #c5c9ca;*/
 }
 .recipe img {
 	position: absolute;
 	display: inline-block;
 	width: 105%;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	/*top: 50%;*/
+	/*left: 50%;*/
+	/*transform: translate(-50%, -50%);*/
+	overflow:hidden;
+	-moz-transition: all 1s ease-out;
+	-o-transition: all 1s ease-out;
+	-webkit-transition: all 1s ease-out;
+	transition: all 1s ease-out;
+}
+.recipe img:hover {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
 }
 .recipe__info {
 	height: 100%;
@@ -701,11 +712,11 @@ body {
 	top: 0;
 }
 .time:after {
-	background-image: url(../img/timer.png);
+	background-image: url(../img/timer.svg);
 
 }
 .portion:after {
-	background-image: url(../img/plate.png);
+	background-image: url(../img/plate.svg);
 }
 .recipe__photo {
 	min-height: 240px;
@@ -718,7 +729,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
-	box-shadow: 0 7px 15px 1px #c5c9ca;
+	/*box-shadow: 0 7px 15px 1px #c5c9ca;*/
 }
 .recipe__caption {
 	display: block;
