menu js animate

--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -52,17 +52,31 @@ body {
 	position: absolute;
 	width: 175px;
 	height: 220px;
-	background-color: #01336e;
+	left: 60px;
+	top: -15px;
+}
+.logo__photo {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: inherit;
+	height: inherit;
 	background-image: url(../img/logo.svg);
 	background-position: center;
 	background-repeat: no-repeat;
 	-webkit-background-size: contain;
 	background-size: contain;
-	left: 60px;
-	top: -15px;
-	/*border-radius: 0% 0% 140% 0% / 0% 0% 40% 90%;*/
-	border-radius: 0% 0% 260% 0% / 0% 0% 90% 0%;
+	z-index: 5;
+}
+.logo__shadow {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: inherit;
+	height: inherit;
+	border-radius: 0% 0% 140% 0% / 0% 0% 45% 0%;
 	box-shadow: 0 0 20px 15px #fff;
+	z-index: 1;
 }
 .header__menu {
 	display: block;
@@ -117,7 +131,7 @@ body {
 	outline: none;
 	transition: 0.2s linear;
 }
-.main-menu__link:hover, .main-menu__link:active, .main-menu__link--active {
+.main-menu__link:hover, .main-menu__link:active, .link--active {
 	color: #00adb5;
 	text-decoration: none;
 }
@@ -362,6 +376,7 @@ body {
 	height: 50px;
 	text-align: center;
 	margin: 0 auto;
+	cursor: pointer;
 }
 
 .promo {
