change recipes images

--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -55,6 +55,12 @@ body {
 	left: 60px;
 	top: -15px;
 }
+@media (min-width: 992px) and (max-width: 1366px) {
+	.logo {
+		width: 125px;
+		height: 160px;
+	}
+}
 .logo__photo {
 	position: absolute;
 	top: 0;
@@ -77,6 +83,11 @@ body {
 	border-radius: 0% 0% 140% 0% / 0% 0% 45% 0%;
 	box-shadow: 0 0 20px 15px #fff;
 	z-index: 1;
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+	.logo__shadow {
+		top: -2px;
+	}
 }
 .header__menu {
 	display: block;
@@ -107,13 +118,15 @@ body {
 	list-style-type: none;
 	min-height: inherit;
 }
-@media (min-width: 1200px) and (max-width: 1920px) {
+@media (min-width: 1366px) and (max-width: 1920px) {
 	.main-menu {
-		max-width: 860px;
 		font-size: 2.2em;
 	}
 }
-@media (min-width: 992px) and (max-width: 1200px) {
+@media (min-width: 992px) and (max-width: 1366px) {
+	.main-menu {
+		max-width: 800px;
+	}
 }
 @media (min-width: 768px) and (max-width: 992px) {
 }
