--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -437,7 +437,7 @@ body {
 	width: 100%;
 	height: 100%;
 }
-.product-slider__photo:after {
+.product-slider__photo:after, .all-products-slider .product__photo:after {
 	position: absolute;
 	display: block;
 	content: '';
